// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="downshift-0-label"
  aria-owns="downshift-0-menu"
  role="combobox"
>
  <label
    data-testid="label"
    for="downshift-0-input"
    id="downshift-0-label"
  >
    label
  </label>
  <input
    aria-autocomplete="list"
    aria-controls="downshift-0-menu"
    aria-expanded="false"
    aria-labelledby="downshift-0-label"
    autocomplete="off"
    data-testid="input"
    id="downshift-0-input"
    role="listbox"
    value="item"
  />
  <button
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="open menu"
    data-testid="button"
    data-toggle="true"
    role="button"
    type="button"
  />
  <ul
    aria-labelledby="downshift-0-label"
    data-testid="menu"
    id="downshift-0-menu"
    role="listbox"
  >
    <li
      aria-selected="true"
      data-testid="item-0"
      id="downshift-0-item-0"
      role="option"
    >
      item
    </li>
  </ul>
</div>
`;

exports[`can override the ids 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="custom-label-id"
  aria-owns="custom-menu-id"
  role="combobox"
>
  <label
    data-testid="label"
    for="custom-input-id"
    id="custom-label-id"
  >
    label
  </label>
  <input
    aria-autocomplete="list"
    aria-controls="custom-menu-id"
    aria-expanded="false"
    aria-labelledby="custom-label-id"
    autocomplete="off"
    data-testid="input"
    id="custom-input-id"
    role="listbox"
    value=""
  />
  <button
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="open menu"
    data-testid="button"
    data-toggle="true"
    role="button"
    type="button"
  />
  <ul
    aria-labelledby="custom-label-id"
    data-testid="menu"
    id="custom-menu-id"
    role="listbox"
  >
    <li
      aria-selected="false"
      data-testid="item-0"
      id="custom-item-id-0"
      role="option"
    >
      item
    </li>
  </ul>
</div>
`;
